--- a/Contact-me.html
+++ b/Contact-me.html
@@ -28,6 +28,7 @@
 <center>💛🌈𝑁𝑢𝑐ℎ𝑗𝑎𝑟𝑒𝑒 🌈💙</center>
  <center><img src="D:\2564-2\web\LAB HTML\im\ACDN9174.JPG" width="500"  height="700" boder="50"> </center>
 <ul>
+  <img src="D:\2564-2\web\LAB HTML\im\ACDN9174.JPG" alt= "nuchjaree" width="500"  height="700" boder="50">
   <li>E-mail:nuchjaree.nuch@g.swu.ac.th📨</li>
   <li>IG: NNJRN__N📳</li>
   <li>Facebook: Nuchjare Ladtayakul🌏</li>
