--- a/Contact-me.html
+++ b/Contact-me.html
@@ -13,7 +13,7 @@
 <center><p>🏫Srinakharinwirot University🏫</p></center>
 <hr size = "4" noshade>
 <tr>
-<td><form class="" action="index.html" method="post"></td>
+<td><form class="" action="Index.html" method="post"></td>
   <label>Your Name</label>
   <input type="text" name="" value="">
   <input type="submit" value="Submit">
@@ -26,13 +26,11 @@
        <hr>
 <h2>Contact</h2>
 <center>💛🌈𝑁𝑢𝑐ℎ𝑗𝑎𝑟𝑒𝑒 🌈💙</center>
- <center><img src="D:\2564-2\web\LAB HTML\im\ACDN9174.JPG" width="500"  height="700" > </center>
+ <center><img src="https://scontent.fbkk2-8.fna.fbcdn.net/v/t1.6435-9/129346331_3592775837480559_7489982406643259048_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=xp4CCl0lPCoAX9ID48W&_nc_ht=scontent.fbkk2-8.fna&oh=00_AT8y1DAzVzZV6UktSdS3W5TxrbD8lEox5agjCPSATsP5Bg&oe=625392EA" width="500" height="700"/></center>
 <ul>
-  <img src="D:\2564-2\web\LAB HTML\im\ACDN9174.JPG" alt= "nuchjaree" width="500"  height="700">
   <li>E-mail:nuchjaree.nuch@g.swu.ac.th📨</li>
   <li>IG: NNJRN__N📳</li>
   <li>Facebook: Nuchjare Ladtayakul🌏</li>
 </ul>
-<img src="https://scontent.fbkk2-8.fna.fbcdn.net/v/t1.6435-9/129346331_3592775837480559_7489982406643259048_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=xp4CCl0lPCoAX9ID48W&_nc_ht=scontent.fbkk2-8.fna&oh=00_AT8y1DAzVzZV6UktSdS3W5TxrbD8lEox5agjCPSATsP5Bg&oe=625392EA" width="500" height="700"/>
 </body>
 </html>
