--- a/Contact-me.html
+++ b/Contact-me.html
@@ -12,25 +12,49 @@
 <center><p><strong><em>@NUCHJAREE LERTHTAYAKUL@</strong></<em></p></center>
 <center><p>🏫Srinakharinwirot University🏫</p></center>
 <hr size = "4" noshade>
+<h2>Contact</h2>
+<center>💛🌈𝑁𝑢𝑐ℎ𝑗𝑎𝑟𝑒𝑒 🌈💙</center>
+ <center><img src="https://scontent.fbkk2-8.fna.fbcdn.net/v/t1.6435-9/129346331_3592775837480559_7489982406643259048_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=xp4CCl0lPCoAX9ID48W&_nc_ht=scontent.fbkk2-8.fna&oh=00_AT8y1DAzVzZV6UktSdS3W5TxrbD8lEox5agjCPSATsP5Bg&oe=625392EA" width="500" height="700"/></center>
+<ul>
+  <h2>My Contact</h2>
+<div id="example1">
+  <p> Hi my name is Nuchjare Lerthtayaku, Nice to meet you.👋
+
+    <li>E-mail:nuchjaree.nuch@g.swu.ac.th📨</li>
+  <li>IG: NNJRN__N📳</li>
+  <li>Facebook: Nuchjare Ladtayakul🌏</li></p>
+</div>
+</ul>
+<hr>
+<h3></h3>
 <tr>
-<td><form class="" action="Index.html" method="post"></td>
+<h3>  contact information</h3>
+<table>
+  <form class="" action="Index.html" method="post">
   <label>Your Name</label>
   <input type="text" name="" value="">
-  <input type="submit" value="Submit">
+  <form class="" action="Index.html" method="post">
+  <label>Last Name</label>
+  <input type="text" name="" value="">
 </form>
+</table>
+
 <td><label for="start">Birth date🗓️:</label>
 <input type="date" id="start" name="trip-start"
        value="2000-08-11"
        min="1999-01-01" max="2021-12-31"></td>
 </tr>
-       <hr>
-<h2>Contact</h2>
-<center>💛🌈𝑁𝑢𝑐ℎ𝑗𝑎𝑟𝑒𝑒 🌈💙</center>
- <center><img src="https://scontent.fbkk2-8.fna.fbcdn.net/v/t1.6435-9/129346331_3592775837480559_7489982406643259048_n.jpg?_nc_cat=103&ccb=1-5&_nc_sid=8bfeb9&_nc_ohc=xp4CCl0lPCoAX9ID48W&_nc_ht=scontent.fbkk2-8.fna&oh=00_AT8y1DAzVzZV6UktSdS3W5TxrbD8lEox5agjCPSATsP5Bg&oe=625392EA" width="500" height="700"/></center>
-<ul>
-  <li>E-mail:nuchjaree.nuch@g.swu.ac.th📨</li>
-  <li>IG: NNJRN__N📳</li>
-  <li>Facebook: Nuchjare Ladtayakul🌏</li>
-</ul>
+<form><label> Email:</label> <input type="text" name="email"><br></from>
+       <TITLE>การสร้างฟอร์ม</TITLE>
+    </HEAD>
+<BODY BGCOLOR="CYAN">
+    <h4>Message</h4>
+    <FORM NAME="INPUT"แสดงความคิดเห็น>
+    <TEXTAREA NAME="COMMENT"COLS=50 ROW=20></TEXTAREA>
+<input name="submit" type="submit">
+<hr>
+
+<p align='right'><label>
+<a href="Index.html">Back↩️</a><label></p>
 </body>
 </html>
