--- a/Index.html
+++ b/Index.html
@@ -33,8 +33,8 @@
 </html>
 <hr>
 <center>
-  <a href="Hobbie.html">Hobbbies</a>
-  <a href="Contact-me.html">Contact me </a>
+  <label><a href="Hobbie.html">Hobbbies⬆️</a></label>
+  <label><a href="Contact-me.html">Contact me⬆️</a></label>
 </center>
 <center><p>my favorite colors:</p>
 <div>
@@ -47,7 +47,7 @@
     <thead>
     <th>types</th>
     <th>skills</th>
-
+    <th>my favor</th>
   </tr>
   <tr>
     <td>Geoinformatics program </td>
@@ -57,13 +57,13 @@
   <tr>
     <td>Programming skills </td>
     <td>HTML, Python </td>
-      <td>🌟🌟🌟🌟🌟</td>
+    <td>🌟🌟🌟🌟🌟</td>
   </tr>
   <p>How much do you like me ?:</p>
 <div>
   <input type="range" id="💖" name="💖"
          min="0" max="100" value="90" step="10">
-  <label for="cowbell">💖</label>
+  <label1 for="cowbell">💖</label1>
 </div>
 </table></center>
 </body>
